Fixed z-index for vistions, contact & social to always be displayed atop the slides

--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ h4 {
     position: absolute;
     top: 10vh;
     left: 5vw;
+
+    z-index: 10;
 }
 
 .visions-toggler {
@@ -121,6 +123,8 @@ img {
     position: absolute;
     top: 50vh;
     left: 60vw;
+
+    z-index: 10;
 }
 
 
@@ -139,7 +143,7 @@ img {
     align-items: center;
     
     color: rgb(233, 233, 233);
-
+    
     position: absolute;
     bottom: 0.5em;
 }
@@ -154,8 +158,8 @@ img {
     left: 60vw;
     
     color: var(--color-main);
-
-
+    
+    z-index: 10;
 }
 
 a {
